tests/reject/base_mismatch_index_arg.ty
# tychoc0 parity: a base-type mismatch supplied by a variable / index / call (not
# just a literal) must be a clean diagnostic in BOTH compilers, never a cc error.
fn need_str(s: string) -> int:
    return len(s)
fn main():
    xs := [1, 2, 3]
    println(str(need_str(xs[0])))
